--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -12,7 +12,7 @@ spring:
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cloudDB01?serverTimezone=UTC+8
+    url: jdbc:mysql://localhost:3306/cloudDB01?serverTimezone=GMT+8
     username: root
     password: 123456
     dbcp2:
@@ -49,7 +49,7 @@ spring:
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cloudDB02?serverTimezone=UTC+8
+    url: jdbc:mysql://localhost:3306/cloudDB02?serverTimezone=GMT+8
     username: root
     password: 123456
     dbcp2:
